--- a/app/src/main/res/layout/activity_game_ended.xml
+++ b/app/src/main/res/layout/activity_game_ended.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PinNumber">
+    tools:context=".GameEndedActivity">
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/imageTest"
-        android:layout_width="192dp"
-        android:layout_height="155dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="GAME ENDED BY TEACHER"
+        android:gravity="center"
+        android:textSize="40sp"/>
 
 </android.support.constraint.ConstraintLayout>
