--- a/app/src/main/res/layout/activity_teacher_home.xml
+++ b/app/src/main/res/layout/activity_teacher_home.xml
@@ -57,49 +57,7 @@
 
         >
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/gameCodesCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="12dp"
-            android:layout_margin="12dp"
 
-
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-
-                android:padding="16dp"
-                android:orientation="vertical"
-                android:background="#D6D4D4">
-
-                <ImageView
-                    android:id="@+id/getCodes"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/codes_icon" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Game Codes"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:textColor="#000000"
-
-                    />
-
-
-            </LinearLayout>
-
-
-        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/currentGamesCard"
@@ -130,7 +88,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Current Games"
+                    android:text="Start Games"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="18sp" />
@@ -184,45 +142,6 @@
         </android.support.v7.widget.CardView>
 
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/questionsCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            app:cardElevation="60dp"
-            app:cardCornerRadius="12dp"
-            android:layout_margin="12dp"
-
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:padding="16dp"
-                android:orientation="vertical"
-                android:background="#D6D4D4">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/question_icon"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Publish Questions"
-                    android:textSize="18sp"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    />
-
-
-            </LinearLayout>
-
-
-        </android.support.v7.widget.CardView>
 
 
 
