--- a/app/src/main/res/layout/activity_insert_green_card.xml
+++ b/app/src/main/res/layout/activity_insert_green_card.xml
@@ -57,7 +57,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="380dp"
-        android:text="Button"
+        android:text="add card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
