--- a/app/src/main/res/layout-land/activity_add_playing_cards.xml
+++ b/app/src/main/res/layout-land/activity_add_playing_cards.xml
@@ -99,8 +99,8 @@
 
     <Button
         android:id="@+id/seeRemovedCardsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="141dp"
+        android:layout_height="76dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
