--- a/app/src/main/res/layout/activity_insert_red_card.xml
+++ b/app/src/main/res/layout/activity_insert_red_card.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Enter a caption and an amount for the card then press Submit"
+        android:text="Enter a caption and an amount for the card then click Add Card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
