--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,162 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@drawable/gradient"
+    android:gravity="center"
+    android:orientation="horizontal"
+    tools:context=".MainActivity"
 
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        android:layout_margin="12dp"
+        android:onClick="goToTeacherSite"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp"
 
         >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="32dp"
-
-            >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#D6D4D4"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="32dp">
 
             <ImageView
-                android:layout_width="62dp"
-                android:layout_height="62dp"
-                android:src="@drawable/cards_icon"
-                android:layout_alignParentRight="true"
-                />
+                android:id="@+id/teacherImg"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/teacher_icon" />
 
             <TextView
-                android:id="@+id/titleText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
-                android:textColor="#FFFFFF"
-                android:text="Game title..."
+                android:text="@string/teacher_site"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="24sp"
+
                 />
 
 
-        </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        </LinearLayout>
 
 
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_gravity="center"
-            android:columnOrderPreserved="false"
-            android:alignmentMode="alignMargins"
-            android:rowCount="2"
-            android:columnCount="2"
+    </android.support.v7.widget.CardView>
 
-            >
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        android:layout_margin="12dp"
+        android:onClick="goToPupilSite"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="60dp"
 
+        >
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#D6D4D4"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="32dp">
+
+            <ImageView
+                android:id="@+id/pupilImg"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/pupils_icon" />
+
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                app:cardElevation="6dp"
-                app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                android:onClick="goToTeacherSite"
-
-                >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:padding="32dp"
-                    android:orientation="vertical"
-                    android:background="#D6D4D4">
-
-                    <ImageView
-                        android:id="@+id/teacherImg"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:src="@drawable/teacher_icon"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/teacher_site"
-                        android:textAlignment="center"
-                        android:textSize="24sp"
-                        android:textColor="#000000"
-
-                        />
+                android:text="@string/pupil_site"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="24sp" />
 
 
-                </LinearLayout>
+        </LinearLayout>
 
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                app:cardElevation="60dp"
-                app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                android:onClick="goToPupilSite"
-
-                >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:padding="32dp"
-                    android:orientation="vertical"
-                    android:background="#D6D4D4">
-
-                    <ImageView
-                        android:id="@+id/pupilImg"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:src="@drawable/pupils_icon"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/pupil_site"
-                        android:textAlignment="center"
-                        android:textSize="24sp"
-                        android:textColor="#000000"
-                        />
+    </android.support.v7.widget.CardView>
 
 
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-        </GridLayout>
-
-    </LinearLayout>
-
-
-
-
-
-</RelativeLayout>
+</LinearLayout>
